syntax = "proto3";

package common;

enum ErrCode{
    SUCC = 0;
    CONN_SQL = 10001;
    EXEC_SQL = 10002;
    USED_PHONE = 10003;
    NOT_EXIST  = 10004;
    INVALID_TOKEN = 10005;
    FETCH_SERVER = 10006;
}

message Head {
    int64 uid = 1;
    ErrCode retcode = 2;
    int32 timecost = 3;
    int64 ts = 4;
    string sid = 5;
}

message CommRequest {
    Head head = 1;
    int64 seq = 2;
    int32 num = 3;
    int32 type = 4;
}

message WifiInfo {
    string ssid = 1;
    string username = 2;
    string password = 3;
    double longitude = 4;
    double latitude = 5;
}

message BannerInfo {
    int64 id = 1;
    string img = 2;
    string dst = 3;
    int32 online = 4;
    int32 priority = 5;
    int32 deleted = 6;
}

message AddressInfo {
    int64 aid = 1;
    int64 province = 2;
    int64 city = 3;
    int64 zone = 4;
    int64 zip = 5;
    string addr = 6;
    string detail = 7;
    bool def = 8;
    string user = 9;
    string mobile = 10;
}
