syntax = "proto3";

import "Server/proto/common/common.proto";

package inquiry;

service Inquiry {
    rpc SubmitCode(CodeRequest) returns (LoginReply) {}
    rpc Login(LoginRequest) returns (LoginReply) {}
    rpc CheckToken(TokenRequest) returns (common.CommReply) {}
    rpc GetPhoneCode(PhoneRequest) returns (common.CommReply) {}
    rpc BindPhone(PhoneCodeRequest) returns (RoleReply) {}
}

message CodeRequest {
    common.Head head = 1;
    string code = 2;
}

message LoginReply {
    common.Head head = 1;
    int64 uid = 2;
    string token = 3;
    int64 flag = 4;
    int64 hasphone = 5;
    string sid = 6;
    int64 role = 7;
}

message LoginRequest {
    common.Head head = 1;
    string rawdata = 2;
    string signature = 3;
    string encrypteddata = 4;
    string iv = 5;
    string sid = 6;
}

message TokenRequest {
    common.Head head = 1;
    int64 type = 2;
    string token = 3;
}

message PhoneRequest {
    common.Head head = 1;
    string phone = 2;
}

message PhoneCodeRequest {
    common.Head head = 1;
    string phone = 2;
    int64 code = 3;
}

message RoleReply {
    common.Head head = 1;
    int64 role = 2;
}
